--- a/login.css
+++ b/login.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   font-family: "Quicksand", sans-serif;
 }
+
 body {
   display: flex;
   justify-content: center;
@@ -19,6 +20,7 @@ body {
   background-size: cover;
   overflow: hidden;
 }
+
 .ring {
   position: relative;
   width: 500px;
@@ -27,6 +29,7 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .ring i {
   position: absolute;
   inset: 0;
@@ -34,38 +37,47 @@ body {
   opacity: 0.7;
   transition: 0.5s;
 }
+
 .ring i:nth-child(1) {
   border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
   animation: animate 6s linear infinite;
 }
+
 .ring i:nth-child(2) {
   border-radius: 41% 44% 56% 59%/38% 62% 63% 37%;
   animation: animate 4s linear infinite;
 }
+
 .ring i:nth-child(3) {
   border-radius: 41% 44% 56% 59%/38% 62% 63% 37%;
   animation: animate2 10s linear infinite;
 }
+
 .ring:hover i {
   border: 6px solid var(--clr);
   filter: drop-shadow(0 0 20px var(--clr));
 }
+
 @keyframes animate {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
+
 @keyframes animate2 {
   0% {
     transform: rotate(360deg);
   }
+
   100% {
     transform: rotate(0deg);
   }
 }
+
 .login {
   position: absolute;
   width: 300px;
@@ -76,14 +88,17 @@ body {
   flex-direction: column;
   gap: 20px;
 }
+
 .login h2 {
   font-size: 2em;
   color: #fff;
 }
+
 .login .inputBx {
   position: relative;
   width: 100%;
 }
+
 .login .inputBx input {
   position: relative;
   width: 100%;
@@ -96,6 +111,7 @@ body {
   box-shadow: none;
   outline: none;
 }
+
 .login .inputBx input[type="submit"] {
   width: 100%;
   background: #0078ff;
@@ -103,13 +119,16 @@ body {
   border: none;
   cursor: pointer;
 }
+
 .login .inputBx input[type="submit"]:hover {
-  transition: ease-in-out 0,3s;
+  transition: ease-in-out 0, 3s;
   transform: scale(1.04);
 }
+
 .login .inputBx input::placeholder {
   color: rgba(255, 255, 255, 0.75);
 }
+
 .login .links {
   position: relative;
   width: 100%;
@@ -118,12 +137,14 @@ body {
   justify-content: space-between;
   padding: 0 20px;
 }
+
 .login .links a {
   color: #fff;
   text-decoration: none;
 }
+
 .login .links a:hover {
-  transition: ease-in-out 0,3s;
+  transition: ease-in-out 0, 3s;
   transform: scale(1.03);
   color: yellow;
 }
